# crellinor-rust

./: .gitignore  Cargo.toml  README.md
resources/ui/: helper.js  index.html  worldmap.html  worldmap.js
resources/ui/stylesheets/: worldmap.css
scripts/: combine-into-csv.sh  combine-population.sh  json-to-csv-pop-only.sh  json-to-csv.sh  map.jq  population-as-csv.sh
src/: creature.rs  genetics.rs  lib.rs  loader.rs  log.rs  main.rs  multiverse.rs  params.rs  plant.rs  program.rs  random.rs  terrain.rs  utils.rs  web.rs  world.rs
tests/: integration_tests.rs
