[package]
name = "crellinor"
version = "0.1.0"
authors = ["Erik Doernenburg <erik@doernenburg.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
maplit = "1.0.1"
rand = "0.8.5"  
rand_xorshift = "0.3.0"
serde = "1.0.76"
serde_json = "1.0.26"
serde_derive = "1.0.76"
uuid = { version = "1.1.1", features = ["v4", "serde"] }
