[package]
name = "crellinor"
version = "0.1.0"
authors = ["Erik Doernenburg <erik@doernenburg.com>"]
edition = "2018"

[dependencies]
maplit = "1.0.1"
rand = "0.8.5"
rand_xorshift = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1.1", features = ["v4", "serde"] }
gotham = "0.7.1"
gotham_derive = "0.7"
mime = "0.3"
